--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,69 +1,89 @@
-#tester
+html, body, #carousel, #carousel ul, #carousel li
 {
-	width: 100%;
-	height: 20%;
+    min-height: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    position: relative;
 }
 
-  html, body, #carousel, #carousel ul, #carousel li {
-            min-height: 100%;
-            height: 100%;
-            padding: 0;
-            margin: 0;
-            position: relative;
-        }
+#carousel 
+{
+    background: silver;
+    overflow: hidden;
+    width: 100%;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translate3d(0,0,0) scale3d(1,1,1);
+    -webkit-transform-style: preserve-3d;
+}
 
-        #carousel {
-            background: silver;
-            overflow: hidden;
-            width: 100%;
-            -webkit-backface-visibility: hidden;
-            -webkit-transform: translate3d(0,0,0) scale3d(1,1,1);
-            -webkit-transform-style: preserve-3d;
-        }
+#carousel ul.animate 
+{
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
+}
 
-        #carousel ul.animate {
-            -webkit-transition: all .3s;
-            -moz-transition: all .3s;
-            -o-transition: all .3s;
-            transition: all .3s;
-        }
+#carousel ul
+{
+    -webkit-transform: translate3d(0%,0,0) scale3d(1,1,1);
+    -moz-transform: translate3d(0%,0,0) scale3d(1,1,1);
+    -ms-transform: translate3d(0%,0,0) scale3d(1,1,1);
+    -o-transform: translate3d(0%,0,0) scale3d(1,1,1);
+    transform: translate3d(0%,0,0) scale3d(1,1,1);
+    overflow: hidden;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
+}
 
-        #carousel ul {
-            -webkit-transform: translate3d(0%,0,0) scale3d(1,1,1);
-            -moz-transform: translate3d(0%,0,0) scale3d(1,1,1);
-            -ms-transform: translate3d(0%,0,0) scale3d(1,1,1);
-            -o-transform: translate3d(0%,0,0) scale3d(1,1,1);
-            transform: translate3d(0%,0,0) scale3d(1,1,1);
-            overflow: hidden;
-            -webkit-backface-visibility: hidden;
-            -webkit-transform-style: preserve-3d;
-        }
+#carousel ul 
+{
+    -webkit-box-shadow: 0 0 20px rgba(0,0,0,.2);
+    box-shadow: 0 0 20px rgba(0,0,0,.2);
+    position: relative;
+}
 
-        #carousel ul {
-            -webkit-box-shadow: 0 0 20px rgba(0,0,0,.2);
-            box-shadow: 0 0 20px rgba(0,0,0,.2);
-            position: relative;
-        }
+#carousel li
+{
+    float: left;
+    overflow: hidden;
+    -webkit-transform-style: preserve-3d;
+    -webkit-transform: translate3d(0,0,0);
+}
 
-        #carousel li {
-            float: left;
-            overflow: hidden;
-            -webkit-transform-style: preserve-3d;
-            -webkit-transform: translate3d(0,0,0);
-        }
+#carousel li h2 
+{
+    color: #fff;
+    font-size: 30px;
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 0;
+    width: 100%;
+    text-shadow: -1px -1px 0 rgba(0,0,0,.2);
+}
 
-        #carousel li h2 {
-            color: #fff;
-            font-size: 30px;
-            text-align: center;
-            position: absolute;
-            top: 40%;
-            left: 0;
-            width: 100%;
-            text-shadow: -1px -1px 0 rgba(0,0,0,.2);
-        }
+#carousel p
+{
+	color: #666;
+	margin: 0 auto;
+	min-width: 100%;
+	text-align: center;
+	height: 10%;
+	background-color: #fff;
+}
 
-        #carousel li.pane1 { background: #42d692; }
-        #carousel li.pane2 { background: #4986e7; }
-        #carousel li.pane3 { background: #d06b64; }
-      
+.event
+{
+	color: #666;
+	margin: 0 auto;
+	min-width: 100%;
+	text-align: center;
+	height: 10%;
+	background-color: #fff;	
+}
+
+#carousel li.pane1 { background: #42d692; }
+#carousel li.pane2 { background: #4986e7; }
+#carousel li.pane3 { background: #d06b64; }
