--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,6 +85,16 @@ html, body, #carousel, #carousel ul, #carousel li
 	background-color: blue !important; 	
 }
 
+.profile {
+   width: 100px;
+   height: 100px;
+   border-radius: 50%;
+   -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
 #carousel li.pane1 { background: #42d692; }
 #carousel li.pane2 { background: #4986e7; }
 #carousel li.pane3 { background: #d06b64; }
