--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,10 +63,12 @@ html, body, #carousel, #carousel ul, #carousel li
 
 .newevent
 {
-	font-size: 400% !important; 
+	font-size: 300% !important; 
+    height: 11% !important;
 	vertical-align: middle !important;
 	line-height: 150%; 
-
+    box-shadow: 0px 8px 5px #888888;
+    margin: 0 0 30px 0;
 }
 .event
 {
