--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,7 +55,7 @@ html, body, #carousel, #carousel ul, #carousel li
 #carousel div
 {
 	color: #666;
-	min-width: 100%;
+	min-width: 80%;
 	text-align: center;
 	height: 15%;
 	
@@ -75,6 +75,7 @@ html, body, #carousel, #carousel ul, #carousel li
 {
     margin: 15px 0px 0px 0px; 
     height: 20% !important;
+    width: 100%;
     background-color: #D9E852 !important;   
 }
 
@@ -84,10 +85,16 @@ html, body, #carousel, #carousel ul, #carousel li
     padding: 10px 0px 0px 20px;
     font-size: 15px;
     text-align: left;
-    width: 100%;
+    width: 50%;
     text-shadow: -1px -1px 0 rgba(0,0,0,.2);
 }
 
+.accept
+{
+    width: 20% !important;
+    background-color: white;
+
+}
 .eventaccept
 {
     margin: 15px 0px 0px 0px; 
@@ -181,12 +188,71 @@ input[type='checkbox']
 .left
 {
     float: left;
+
 }
 
 .right
 {
     float: right;
+    display: inline-block;
 }
+
+.attending
+{
+    width: 30px;
+    height: 30px;
+}
+
+.notattending
+{
+    width: 30px;
+    height: 30px;
+    opacity: 0.4;
+}
+
+.event h1
+{
+    margin: 0 0 5 70px;
+    line-height: 100%;
+    padding-left: 70px;
+}
+
+.event h2
+{
+    font-size: 10px;
+    float: right;
+}
+
+.event p
+{
+    font-size: 15px;
+    line-height: 50%;
+    text-align: left;
+    margin: 0 0 0 50px;
+    color: #fff; 
+    padding: 0px 0px 10px 20px;
+    text-shadow: -1px -1px 0 rgba(0,0,0,.2);
+}
+
+.lefty
+{
+    float: left;
+    background-color: #d06b64 !important;  
+    width: 70%;    
+}
+ 
+.righty
+{
+    float: right;
+    background-color: #54BE68 !important;  
+    width: 30%;    
+}
+ 
+.clear
+{
+    clear:both;    
+}
+
 #carousel li.pane1 { background: #F2E2DF; }
 #carousel li.pane2 { background: #4986e7; }
 #carousel li.pane3 { background: #d06b64; }
