--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -224,11 +224,10 @@ html, body, #carousel, #carousel ul, #carousel li
 
 .wrapper3 
 {
-    margin: 0;
     padding: 0; 
-    background-color: lightgreen !important;
     min-width: 100%;
     height: 50% !important;
+    margin-bottom: 10px;
 }
 
 .profile {
@@ -255,6 +254,7 @@ html, body, #carousel, #carousel ul, #carousel li
 .friends 
 {
     padding: 1% 0 0 4%;
+    margin-left: 35px;
     color: #666;
     min-width: 100%;    
     font-size: 125%; 
